test/fail/io/read_from_write_file.lly
#[
IOError: File not open for reading.
Traceback:
    from [C]: in file::readline
    from read_from_write_file.lly:9: in __main__
]#

var f = file::open("io_test_file.txt", "w")
f.readline()
